# DoJoyStick

./: .gitignore  .gitmodules  ActionMapper.cpp  ActionMapper.h  CMakeLists.txt  DoJoystickAudio.pro  DoJoystickLooper.pro  JoystickEvent.cpp  JoystickEvent.h  JoystickMidiMediator.cpp  JoystickMidiMediator.h  Makefile  README.md  Settings.cpp  Settings.h  dojoysticklooper  dojoysticklooper.hpp  joystick-gateway.cpp  joystick-gateway.h  jsevent.cpp  jsevent.h  looper.h  loopersm.hpp  main.cpp  mouse.cpp  mouseevent.c  mouseeventblocking.c  multiclick.h  slbackend.cpp  slbackend.h
src/: DistrhoPluginInfo.h  dojoystick-plugin.cpp  dojoystick-plugin.h  dojoystick-ui.cpp
tests/: dojoystick-plugin-test.cpp  exampletest.cpp  quicktest.cpp
